unpackaged/main/default/objects/Portal_Deliverables_Section__mdt/Portal_Deliverables_Section__mdt.object-meta.xml
<CustomObject>
    <description>Manages how various sections of Portal Deliverables are handled.</description>
    <label>Portal Deliverables Section</label>
    <pluralLabel>Portal Deliverables Sections</pluralLabel>
</CustomObject>