unpackaged/main/default/objects/Portal_Deliverables_Section__mdt/fields/Fellowship__c.field-meta.xml
<CustomField>
    <fullName>Fellowship__c</fullName>
    <description>For which fellowship does this apply</description>
    <inlineHelpText>For which fellowship does this apply</inlineHelpText>
    <label>Fellowship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Fellowship</fullName>
                <default>true</default>
                <label>U.S. Fellowship</label>
            </value>
            <value>
                <fullName>China Fellowship</fullName>
            </value>
            <value>
                <fullName>India Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>