unpackaged/main/default/objects/Portal_Deliverables_Section__mdt/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the section should be visible or not.</description>
    <inlineHelpText>Whether the section should be visible or not.</inlineHelpText>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>