unpackaged/main/default/objects/Portal_Deliverables_Section__mdt/fields/Section_Field__c.field-meta.xml
<CustomField>
    <fullName>Section_Field__c</fullName>
    <description>Various sections on Portal Deliverables that guide how the section should behave on Portal</description>
    <inlineHelpText>Select the section for which you want to set a property.</inlineHelpText>
    <label>Section / Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section_StartEndDateWorkplan</fullName>
                <default>true</default>
                <label>Section_StartEndDateWorkplan</label>
            </value>
            <value>
                <fullName>Field_StartDate</fullName>
            </value>
            <value>
                <fullName>Field_EndDate</fullName>
            </value>
            <value>
                <fullName>Field_Workplan</fullName>
            </value>
            <value>
                <fullName>Section_MediaProfile</fullName>
            </value>
            <value>
                <fullName>Field_Headshot</fullName>
            </value>
            <value>
                <fullName>Field_Twitter</fullName>
            </value>
            <value>
                <fullName>Field_LinkedIn</fullName>
            </value>
            <value>
                <fullName>Field_PhotoReleaseForm</fullName>
            </value>
            <value>
                <fullName>Section_PreTraining</fullName>
            </value>
            <value>
                <fullName>Field_TrainingInfoSheet</fullName>
            </value>
            <value>
                <fullName>Field_PreTrainingSurvey</fullName>
            </value>
            <value>
                <fullName>Field_FellowAgreement</fullName>
            </value>
            <value>
                <fullName>Field_TrainingPreWork</fullName>
            </value>
            <value>
                <fullName>Section_PostTraining</fullName>
            </value>
            <value>
                <fullName>Field_AttendedTrainingSession</fullName>
            </value>
            <value>
                <fullName>Field_PostTrainingSurvey</fullName>
            </value>
            <value>
                <fullName>Section_FinalDeliverables</fullName>
            </value>
            <value>
                <fullName>Field_FinalDeliverablesInstructions</fullName>
            </value>
            <value>
                <fullName>Field_HeadingPart1PublicDeliverables</fullName>
            </value>
            <value>
                <fullName>Field_HeadingPublicSummaryApprovalStatus</fullName>
            </value>
            <value>
                <fullName>Field_PublicSummaryApprovalStatus</fullName>
            </value>
            <value>
                <fullName>Field_OnsitePhotos</fullName>
            </value>
            <value>
                <fullName>Field_HeadingPart2EDFDeliverables</fullName>
            </value>
            <value>
                <fullName>Field_FinalDeliverablesProjectArea</fullName>
            </value>
            <value>
                <fullName>Field_GHGTargetType</fullName>
            </value>
            <value>
                <fullName>Field_BuildingDataAnalyzed</fullName>
            </value>
            <value>
                <fullName>Field_NumberOfSuppliers</fullName>
            </value>
            <value>
                <fullName>Field_NumberOfVehicles</fullName>
            </value>
            <value>
                <fullName>Field_CompletedActivitiesReport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>