unpackaged/main/default/objects/Portal_Deliverables_Section__mdt/listViews/India.listView-meta.xml
<ListView>
    <fullName>India</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Fellowship__c</columns>
    <columns>Is_Visible__c</columns>
    <columns>Section_Field__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fellowship__c</field>
        <operation>equals</operation>
        <value>India Fellowship</value>
    </filters>
    <label>India</label>
    <language>en_US</language>
</ListView>