unpackaged/main/default/objects/Portal_Deliverables_Section__mdt/listViews/US_Fellowship.listView-meta.xml
<ListView>
    <fullName>US_Fellowship</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Fellowship__c</columns>
    <columns>Section_Field__c</columns>
    <columns>Is_Visible__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fellowship__c</field>
        <operation>equals</operation>
        <value>U.S. Fellowship</value>
    </filters>
    <label>US Fellowship</label>
    <language>en_US</language>
</ListView>